force-app/main/default/objects/Account/fields/AccountantAccount__c.field-meta.xml
<CustomField>
    <fullName>AccountantAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte EC</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>AccountantPartner</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>InternalCompany</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers</relationshipLabel>
    <relationshipName>Entreprises</relationshipName>
    <type>Lookup</type>
</CustomField>