force-app/main/default/objects/Account/fields/Accounting__c.field-meta.xml
<CustomField>
    <fullName>Accounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comptable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptable</relationshipName>
    <type>Lookup</type>
</CustomField>