force-app/main/default/objects/Account/fields/Adresse_fact_et_corresp_diff_rentes__c.field-meta.xml
<CustomField>
    <fullName>Adresse_fact_et_corresp_diff_rentes__c</fullName>
    <formula>NOT(ISBLANK(BillingStreet)&amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingPostalCode)) &amp;&amp;
(NOT(ShippingStreet   =   BillingStreet)  ||  
NOT(ShippingCity   =   BillingCity)  || 
 NOT(ShippingPostalCode   =   BillingPostalCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse fact et corresp différentes</label>
    <type>Checkbox</type>
</CustomField>