force-app/main/default/objects/Account/fields/AdvisorCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvisorCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescripteur Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescriptions (entreprises)</relationshipLabel>
    <relationshipName>Entreprises1</relationshipName>
    <type>Lookup</type>
</CustomField>