force-app/main/default/objects/Account/fields/AlreadyHaveAccountant__c.field-meta.xml
<CustomField>
    <fullName>AlreadyHaveAccountant__c</fullName>
    <label>Avez-vous déjà un comptable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FauxBooleen</valueSetName>
    </valueSet>
</CustomField>