force-app/main/default/objects/Account/fields/AnnualTurnover__c.field-meta.xml
<CustomField>
    <fullName>AnnualTurnover__c</fullName>
    <label>Chiffre d&#39;affaires Annuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-39</fullName>
                <label>0 - 39K€</label>
            </value>
            <value>
                <fullName>40-99</fullName>
                <label>40 - 99K€</label>
            </value>
            <value>
                <fullName>100-249</fullName>
                <label>100 - 249K€</label>
            </value>
            <value>
                <fullName>250-999</fullName>
                <label>250 - 999K€</label>
            </value>
            <value>
                <fullName>1000-2999</fullName>
                <label>1000 - 2999K€</label>
            </value>
            <value>
                <fullName>3000-9999</fullName>
                <label>3000 - 9999K€</label>
            </value>
            <value>
                <fullName>10000-99999</fullName>
                <label>10000 - 99999K€</label>
            </value>
            <value>
                <fullName>100000-*</fullName>
                <label>100000K€ et plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>