force-app/main/default/objects/Account/fields/ApeCode__c.field-meta.xml
<CustomField>
    <fullName>ApeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code APE</label>
    <referenceTo>ApeCode__c</referenceTo>
    <relationshipLabel>Entreprises</relationshipLabel>
    <relationshipName>entreprises</relationshipName>
    <type>Lookup</type>
</CustomField>