force-app/main/default/objects/Account/fields/ApeCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>ApeCodeLabel__c</fullName>
    <formula>ApeCode__r.ApeCodeLabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé code APE</label>
    <type>Text</type>
</CustomField>