force-app/main/default/objects/Account/fields/ArticlesOfAssociation__c.field-meta.xml
<CustomField>
    <fullName>ArticlesOfAssociation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statuts</label>
    <type>Checkbox</type>
</CustomField>