force-app/main/default/objects/Account/fields/BankConsultantDetails__c.field-meta.xml
<CustomField>
    <fullName>BankConsultantDetails__c</fullName>
    <label>Détails Consultant Banque</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>