force-app/main/default/objects/Account/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L-Expert-Comptable.com</fullName>
            </value>
            <value>
                <fullName>Tiime</fullName>
            </value>
            <value>
                <fullName>Trouver-mon-comptable.com</fullName>
            </value>
            <value>
                <fullName>Novaa</fullName>
            </value>
            <value>
                <fullName>Incityz</fullName>
            </value>
            <value>
                <fullName>Condillac</fullName>
            </value>
            <value>
                <fullName>Goneo</fullName>
            </value>
            <value>
                <fullName>Ola Compta</fullName>
            </value>
            <value>
                <fullName>Le Net Expert Comptable</fullName>
            </value>
            <value>
                <fullName>Onlicorn</fullName>
            </value>
            <value>
                <fullName>Pepit</fullName>
            </value>
            <value>
                <fullName>L-Expert-Comptable Lille</fullName>
            </value>
            <value>
                <fullName>Evocompta</fullName>
            </value>
            <value>
                <fullName>Auficom</fullName>
            </value>
            <value>
                <fullName>Proxi Compta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>