force-app/main/default/objects/Account/fields/CallBackExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>CallBackExpectedDate__c</fullName>
    <label>Date de relance prévue</label>
    <type>DateTime</type>
</CustomField>