force-app/main/default/objects/Account/fields/CampanyAdressProof__c.field-meta.xml
<CustomField>
    <fullName>CampanyAdressProof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Justificatif de domiciliation</label>
    <type>Checkbox</type>
</CustomField>