force-app/main/default/objects/Account/fields/Charged__c.field-meta.xml
<CustomField>
    <fullName>Charged__c</fullName>
    <label>Payant ? (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>