force-app/main/default/objects/Account/fields/CityBranding__c.field-meta.xml
<CustomField>
    <fullName>CityBranding__c</fullName>
    <label>Ville Marque</label>
    <length>30</length>
    <type>Text</type>
</CustomField>