force-app/main/default/objects/Account/fields/CMARegistration__c.field-meta.xml
<CustomField>
    <fullName>CMARegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inscription à la CMA</label>
    <type>Checkbox</type>
</CustomField>