force-app/main/default/objects/Account/fields/CollaborateurChargeProd__c.field-meta.xml
<CustomField>
    <fullName>CollaborateurChargeProd__c</fullName>
    <label>Collaborateur Chargé de Prod</label>
    <length>10</length>
    <type>Text</type>
</CustomField>