force-app/main/default/objects/Account/fields/CommercialName__c.field-meta.xml
<CustomField>
    <fullName>CommercialName__c</fullName>
    <label>Nom commercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>