force-app/main/default/objects/Account/fields/CompanyCreated__c.field-meta.xml
<CustomField>
    <fullName>CompanyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entreprise créée</label>
    <type>Checkbox</type>
</CustomField>