force-app/main/default/objects/Account/fields/CompanyFormalityCentre__c.field-meta.xml
<CustomField>
    <fullName>CompanyFormalityCentre__c</fullName>
    <label>Centre de Formalités des Entreprises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cci</fullName>
                <label>CCI</label>
            </value>
            <value>
                <fullName>Cma</fullName>
                <label>CMA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>