force-app/main/default/objects/Account/fields/ContactPartner__c.field-meta.xml
<CustomField>
    <fullName>ContactPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Partenaire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Il est indispensable de choisir un contact du Cabinet Partenaire</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entreprises Clients (Contact Partenaire)</relationshipLabel>
    <relationshipName>EntrprisesClients</relationshipName>
    <type>Lookup</type>
</CustomField>