force-app/main/default/objects/Account/fields/DateClotureExerciceEnCours__c.field-meta.xml
<CustomField>
    <fullName>DateClotureExerciceEnCours__c</fullName>
    <label>Date Clôture Exercice En Cours</label>
    <type>Date</type>
</CustomField>