force-app/main/default/objects/Account/fields/DateKbisReceive__c.field-meta.xml
<CustomField>
    <fullName>DateKbisReceive__c</fullName>
    <label>Date Kbis reçu</label>
    <type>DateTime</type>
</CustomField>