force-app/main/default/objects/Account/fields/DatelastsatisfactionSurvey__c.field-meta.xml
<CustomField>
    <fullName>DatelastsatisfactionSurvey__c</fullName>
    <label>Date Dernière Enquête</label>
    <type>Date</type>
</CustomField>