force-app/main/default/objects/Account/fields/DayClosingPeriod__c.field-meta.xml
<CustomField>
    <fullName>DayClosingPeriod__c</fullName>
    <description>jour de la clôture comptable</description>
    <label>Jour de clôture</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>