force-app/main/default/objects/Account/fields/DetailEvent__c.field-meta.xml
<CustomField>
    <fullName>DetailEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Détail événement</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>EntreprisesClients</relationshipLabel>
    <relationshipName>ClientsMetAt</relationshipName>
    <type>Lookup</type>
</CustomField>