force-app/main/default/objects/Account/fields/EndOfMissionDate__c.field-meta.xml
<CustomField>
    <fullName>EndOfMissionDate__c</fullName>
    <description>Date de perte définitive du client pour un cabinet</description>
    <label>Date de fin de mission</label>
    <type>Date</type>
</CustomField>