force-app/main/default/objects/Account/fields/F11DriveId__c.field-meta.xml
<CustomField>
    <fullName>F11DriveId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash du team drive non visible par le client</description>
    <label>F11DriveId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>