force-app/main/default/objects/Account/fields/FirstClosingDate__c.field-meta.xml
<CustomField>
    <fullName>FirstClosingDate__c</fullName>
    <label>Date de première clôture comptable</label>
    <type>Date</type>
</CustomField>