force-app/main/default/objects/Account/fields/FirstClosingYear__c.field-meta.xml
<CustomField>
    <fullName>FirstClosingYear__c</fullName>
    <label>Année de la première clôture</label>
    <length>4</length>
    <type>Text</type>
</CustomField>