force-app/main/default/objects/Account/fields/FirstnameContactPrincipal__c.field-meta.xml
<CustomField>
    <fullName>FirstnameContactPrincipal__c</fullName>
    <label>Prénom du contact Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>