force-app/main/default/objects/Account/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Etage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>1er</fullName>
            </value>
            <value>
                <fullName>2ème</fullName>
            </value>
            <value>
                <fullName>3ème</fullName>
            </value>
            <value>
                <fullName>4ème</fullName>
            </value>
            <value>
                <fullName>5ème</fullName>
            </value>
            <value>
                <fullName>6ème</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>