force-app/main/default/objects/Account/fields/forwardEmailAlias__c.field-meta.xml
<CustomField>
    <fullName>forwardEmailAlias__c</fullName>
    <label>Email de transfert pour les App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>