force-app/main/default/objects/Account/fields/GoogleDriveId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveId__c</fullName>
    <label>ID Google Drive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>