force-app/main/default/objects/Account/fields/HowManyEmployees__c.field-meta.xml
<CustomField>
    <fullName>HowManyEmployees__c</fullName>
    <label>Combien avez-vous de salariés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NbSalariesHubSpot</valueSetName>
    </valueSet>
</CustomField>