force-app/main/default/objects/Account/fields/Iban__c.field-meta.xml
<CustomField>
    <fullName>Iban__c</fullName>
    <label>IBAN de prélèvement</label>
    <length>30</length>
    <type>Text</type>
</CustomField>