force-app/main/default/objects/Account/fields/ID_Vital_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Vital_Card__c</fullName>
    <label>ID de la carte vitale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>