force-app/main/default/objects/Account/fields/IdBureauBaseGI__c.field-meta.xml
<CustomField>
    <fullName>IdBureauBaseGI__c</fullName>
    <description>Le numéro du bureau associé à ce cabinet dans la Base GI. Ne doit pas servir pour les comptes de type Client.</description>
    <label>Id Bureau BaseGI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>