force-app/main/default/objects/Account/fields/IdPdfOffers__c.field-meta.xml
<CustomField>
    <fullName>IdPdfOffers__c</fullName>
    <label>Ids des présentations pdf des offres</label>
    <length>100</length>
    <type>Text</type>
</CustomField>