force-app/main/default/objects/Account/fields/IncomeTaxOption__c.field-meta.xml
<CustomField>
    <fullName>IncomeTaxOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option à l&#39;IR</label>
    <type>Checkbox</type>
</CustomField>