force-app/main/default/objects/Account/fields/InternalPartner__c.field-meta.xml
<CustomField>
    <fullName>InternalPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Désigne les partenaires internes</description>
    <label>Partenaire Groupe</label>
    <type>Checkbox</type>
</CustomField>