force-app/main/default/objects/Account/fields/IntracomVatNumber__c.field-meta.xml
<CustomField>
    <fullName>IntracomVatNumber__c</fullName>
    <formula>&quot;FR&quot;&amp;  RIGHT(&quot;00&quot; &amp; TEXT(IntracomVatNumberPrefix__c),2) &amp;  Siren__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de TVA intracom.</label>
    <type>Text</type>
</CustomField>