force-app/main/default/objects/Account/fields/IntracomVatNumberPrefix__c.field-meta.xml
<CustomField>
    <fullName>IntracomVatNumberPrefix__c</fullName>
    <formula>MOD((3* MOD( VALUE(Siren__c),97))+12 ,97)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Préfixe N° de TVA intracom.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>