force-app/main/default/objects/Account/fields/JobEndComments__c.field-meta.xml
<CustomField>
    <fullName>JobEndComments__c</fullName>
    <label>Commentaires Fin des travaux</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>