force-app/main/default/objects/Account/fields/Kbis__c.field-meta.xml
<CustomField>
    <fullName>Kbis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kbis</label>
    <type>Checkbox</type>
</CustomField>