force-app/main/default/objects/Account/fields/KYCDeclineReason__c.field-meta.xml
<CustomField>
    <fullName>KYCDeclineReason__c</fullName>
    <label>Détails refus KYC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>