force-app/main/default/objects/Account/fields/LastNetIncome__c.field-meta.xml
<CustomField>
    <fullName>LastNetIncome__c</fullName>
    <description>Champs nécessaire à Wallet</description>
    <label>Dernier résultat en K€</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-49</fullName>
            </value>
            <value>
                <fullName>50-149</fullName>
            </value>
            <value>
                <fullName>150-499</fullName>
            </value>
            <value>
                <fullName>500-*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>