force-app/main/default/objects/Account/fields/LeadComments__c.field-meta.xml
<CustomField>
    <fullName>LeadComments__c</fullName>
    <label>Comm. LEAD formulaire Web</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>