force-app/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hors zone - Gratuit</fullName>
            </value>
            <value>
                <fullName>Hors zone - Payant</fullName>
            </value>
            <value>
                <fullName>Éligible - Gratuit</fullName>
            </value>
            <value>
                <fullName>Éligible - Payant</fullName>
            </value>
            <value>
                <fullName>Programme Croissance</fullName>
            </value>
            <value>
                <fullName>Disqualifié</fullName>
            </value>
            <value>
                <fullName>Non éligible - Payant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>