force-app/main/default/objects/Account/fields/LinkCalendly__c.field-meta.xml
<CustomField>
    <fullName>LinkCalendly__c</fullName>
    <label>Lien Calendly</label>
    <type>Url</type>
</CustomField>