force-app/main/default/objects/Account/fields/MainContact__c.field-meta.xml
<CustomField>
    <fullName>MainContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entreprises (Contact principal)</relationshipLabel>
    <relationshipName>Entreprises</relationshipName>
    <type>Lookup</type>
</CustomField>