force-app/main/default/objects/Account/fields/MainEmail__c.field-meta.xml
<CustomField>
    <fullName>MainEmail__c</fullName>
    <label>Email principal</label>
    <type>Email</type>
</CustomField>