force-app/main/default/objects/Account/fields/MainPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MainPhoneNumber__c</fullName>
    <label>Téléphone Principal</label>
    <type>Phone</type>
</CustomField>