force-app/main/default/objects/Account/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <length>100</length>
    <type>Text</type>
</CustomField>