force-app/main/default/objects/Account/fields/MonthClosingPeriod__c.field-meta.xml
<CustomField>
    <fullName>MonthClosingPeriod__c</fullName>
    <label>Mois de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Janvier</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Février</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mars</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Avril</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Mai</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Juin</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Juillet</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Août</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Septembre</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Octobre</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Novembre</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Décembre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>