force-app/main/default/objects/Account/fields/MQLDate__c.field-meta.xml
<CustomField>
    <fullName>MQLDate__c</fullName>
    <description>Renseigné par workflow ou par HubSpot</description>
    <label>Date MQL</label>
    <type>DateTime</type>
</CustomField>