force-app/main/default/objects/Account/fields/NameOfContact__c.field-meta.xml
<CustomField>
    <fullName>NameOfContact__c</fullName>
    <label>Nom du Contact Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>