force-app/main/default/objects/Account/fields/NbOfShares__c.field-meta.xml
<CustomField>
    <fullName>NbOfShares__c</fullName>
    <label>Nombre de titres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>