force-app/main/default/objects/Account/fields/NumberBGI__c.field-meta.xml
<CustomField>
    <fullName>NumberBGI__c</fullName>
    <description>Le numéro de dossier enregistré dans la BaseGI. Ce numéro doit être unique.</description>
    <externalId>true</externalId>
    <label>Numéro Dossier BaseGI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>