force-app/main/default/objects/Account/fields/NumberCreationsYear__c.field-meta.xml
<CustomField>
    <fullName>NumberCreationsYear__c</fullName>
    <label>Nombre de création par an</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>