force-app/main/default/objects/Account/fields/NumberEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberEmployees__c</fullName>
    <label>Nombre de salariés</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>