force-app/main/default/objects/Account/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>Nombre d&#39;employés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-9</fullName>
            </value>
            <value>
                <fullName>10-99</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
            <value>
                <fullName>250 et plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>