force-app/main/default/objects/Account/fields/NumberOfFolders__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFolders__c</fullName>
    <label>Nombre de clients</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>