force-app/main/default/objects/Account/fields/NumbersNewsCustomer__c.field-meta.xml
<CustomField>
    <fullName>NumbersNewsCustomer__c</fullName>
    <label>Nombre de nouveaux clients annuels</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>