force-app/main/default/objects/Account/fields/numm__CodeSAP__c.field-meta.xml
<CustomField>
    <fullName>numm__CodeSAP__c</fullName>
    <label>Code SAP</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>