force-app/main/default/objects/Account/fields/numm__E_mail__c.field-meta.xml
<CustomField>
    <fullName>numm__E_mail__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>